--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SPOTIFY_APP_API_KEY = f7ad929ce8994cd68a5853a184e1bcce
+REACT_APP_API_KEY = 'f7ad929ce8994cd68a5853a184e1bcce'; 
+REACT_APP_API_KEY = f7ad929ce8994cd68a5853a184e1bcce 
