--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_KEY = f7ad929ce8994cd68a5853a184e1bcce 
-SPOTIFY_APP_API_KEY = f7ad929ce8994cd68a5853a184e1bcce
+REACT_APP_YOUR_GIGIH_APP_API_KEY = SECRET_CODE 
+REACT_APP_YOUR_GIGIH_APP_API_KEY = SECRET_CODE
+SKIP_PREFLIGHT_CHECK=true
